# conduit

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  CROSS_COMPILE.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  book.toml  conduit-example.toml  docker-compose.yml  engage.toml  flake.nix  mkdocs.yml  rust-toolchain.toml  taplo.toml  typos.toml
.cargo/: config.toml
.gitlab/: route-map.yml
.gitlab/issue_templates/: Bug Report.md
complement/: Caddyfile  Dockerfile  README.md
conduit/: Cargo.toml
conduit-macros/: Cargo.toml
conduit-macros/src/: doc_generators.rs  lib.rs
conduit/src/: clap.rs  lib.rs  main.rs
conduit/src/api/: appservice_server.rs  server_server.rs
conduit/src/api/client_server/: account.rs  alias.rs  appservice.rs  backup.rs  capabilities.rs  config.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  membership.rs  message.rs  openid.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  relations.rs  report.rs  room.rs  search.rs  session.rs  space.rs  state.rs  sync.rs  tag.rs  threads.rs  to_device.rs  typing.rs  unversioned.rs  user_directory.rs  voip.rs  well_known.rs
conduit/src/api/ruma_wrapper/: axum.rs  mod.rs
conduit/src/config/: mod.rs  proxy.rs  rate_limiting.rs
conduit/src/database/: abstraction.rs  mod.rs
conduit/src/database/abstraction/: rocksdb.rs  sqlite.rs  watchers.rs
conduit/src/database/key_value/: account_data.rs  appservice.rs  globals.rs  key_backups.rs  media.rs  pusher.rs  sending.rs  transaction_ids.rs  uiaa.rs  users.rs
conduit/src/service/: mod.rs  pdu.rs
conduit/src/service/account_data/: data.rs  mod.rs
conduit/src/service/admin/: mod.rs
conduit/src/service/appservice/: mod.rs
conduit/src/service/globals/: data.rs  mod.rs
conduit/src/service/key_backups/: data.rs  mod.rs
conduit/src/service/media/: data.rs  mod.rs
conduit/src/service/pusher/: data.rs  mod.rs
conduit/src/service/rate_limiting/: mod.rs
conduit/src/service/rooms/: mod.rs
conduit/src/service/sending/: mod.rs
conduit/src/service/uiaa/: data.rs  mod.rs
conduit/src/service/users/: data.rs  mod.rs
conduit/src/utils/: error.rs  mod.rs
debian/: README.md  postinst
docker/: README.md  ci-binaries-packaging.Dockerfile  docker-compose.for-traefik.yml  docker-compose.with-traefik.yml
docs/: SUMMARY.md  _getting_help.md  administration.md  appservices.md  configuration.md  delegation.md  faq.md  index.md  matrix-homeservers.md  turn.md
docs/administration/: media.md
docs/configuration/: appservices.md  conduit.toml.md  configuration.md  rate-limiting.md
docs/deploy/: _index.md  binary.md  docker.md  packages.md
docs/deploying/: docker-compose.for-traefik.yml  docker-compose.override.yml  docker-compose.with-traefik.yml  docker-compose.yml  docker.md  generic.md  nixos.md  simple.md
docs/development/: cross-compilation.md  tests-ci.md
docs/installation/: manual.md  packages.md  prerequisites.md
docs/setup/: configuration-options.md  domain.md
docs/setup/installation/: binary.md  docker.md
nix/: shell.nix
nix/pkgs/book/: default.nix
nix/pkgs/default/: cross-compilation-env.nix  default.nix
nix/pkgs/oci-image/: default.nix
rjbench_testing/: docker-compose.yml
src/: appservice_server.rs  clap.rs  client_server.rs  config.rs  data.rs  database.rs  error.rs  lib.rs  main.rs  pdu.rs  ruma_wrapper.rs  server_server.rs  utils.rs
src/api/: appservice_server.rs  server_server.rs
src/api/client_server/: account.rs  alias.rs  appservice.rs  capabilities.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  membership.rs  message.rs  mod.rs  openid.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  relations.rs  report.rs  room.rs  search.rs  session.rs  space.rs  state.rs  sync.rs  tag.rs  typing.rs  unversioned.rs  user_directory.rs  voip.rs  well_known.rs
src/api/ruma_wrapper/: axum.rs  mod.rs
src/client_server/: account.rs  alias.rs  backup.rs  capabilities.rs  config.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  membership.rs  message.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  room.rs  search.rs  session.rs  state.rs  sync.rs  tag.rs  to_device.rs  typing.rs  user_directory.rs
src/config/: mod.rs  proxy.rs
src/database/: abstraction.rs  account_data.rs  admin.rs  appservice.rs  appservices.rs  globals.rs  key_backups.rs  key_value.rs  media.rs  mod.rs  pusher.rs  rooms.rs  sending.rs  uiaa.rs  users.rs
src/database/abstraction/: persy.rs  rocksdb.rs  sled.rs  sqlite.rs  watchers.rs
src/database/key_value/: account_data.rs  appservice.rs  globals.rs  media.rs  mod.rs  pusher.rs  sending.rs  uiaa.rs  users.rs
src/database/key_value/rooms/: alias.rs  mod.rs  search.rs  short.rs  state.rs  state_accessor.rs  state_cache.rs  timeline.rs  user.rs
src/database/rooms/: edus.rs
src/ruma_wrapper/: axum.rs
src/service/: mod.rs  pdu.rs
src/service/account_data/: mod.rs
src/service/admin/: mod.rs
src/service/appservice/: mod.rs
src/service/globals/: data.rs  mod.rs
src/service/media/: data.rs  mod.rs
src/service/pusher/: mod.rs
src/service/rooms/alias/: mod.rs
src/service/rooms/auth_chain/: mod.rs
src/service/rooms/event_handler/: mod.rs
src/service/rooms/helpers/: mod.rs
src/service/rooms/lazy_loading/: mod.rs
src/service/rooms/pdu_metadata/: mod.rs
src/service/rooms/search/: data.rs  mod.rs
src/service/rooms/short/: data.rs  mod.rs
src/service/rooms/spaces/: mod.rs
src/service/rooms/state/: data.rs  mod.rs
src/service/rooms/state_accessor/: data.rs  mod.rs
src/service/rooms/state_cache/: data.rs  mod.rs
src/service/rooms/state_compressor/: mod.rs
src/service/rooms/threads/: data.rs
src/service/sending/: data.rs  mod.rs
src/service/uiaa/: mod.rs
src/service/users/: data.rs  mod.rs
src/utils/: error.rs  mod.rs
sytest/: sytest-whitelist
tests/: Complement.Dockerfile  complement-caddy.json  complement-start.sh  start.sh  test-config.toml
tests/complement/: results.jsonl
tests/sytest/: sytest-whitelist
xtask/: Cargo.toml
(+58 files in other folders)
