[workspace.lints.rust]
explicit_outlives_requirements = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
str_to_string = "warn"

[package]
authors = ["timokoesters <timo@koesters.xyz>"]
description = "A Matrix homeserver written in Rust"
edition = "2021"
homepage = "https://conduit.rs"
license = "Apache-2.0"
name = "conduit"
readme = "README.md"
repository = "https://gitlab.com/famedly/conduit"
version = "0.11.0-alpha"

# See also `rust-toolchain.toml`
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# Web framework
axum = { version = "0.8", default-features = false, features = [
  "form",
  "http1",
  "http2",
  "json",
  "matched-path",
], optional = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = [
  "add-extension",
  "cors",
  "sensitive-headers",
  "trace",
  "util",
] }
tower-service = "0.3"
# Async runtime and utilities
tokio = { version = "1", features = ["fs", "macros", "signal", "sync"] }
# Used for the http request / response body type for Ruma endpoints used with reqwest
bytes = "1"
http = "1"
# Used to find data directory for default db path
directories = "6"
# Used for ruma wrapper
serde_json = { version = "1", features = ["raw_value"] }
# Used for appservice registration files
serde_yaml = "0.9"
# Used for pdu definition
serde = { version = "1", features = ["rc"] }
# Used for secure identifiers
rand = "0.9"
# Used to hash passwords
rust-argon2 = "2"
# Used to send requests
hyper = "1"
hyper-util = { version = "0.1", features = [
  "client",
  "client-legacy",
  "http1",
  "http2",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
  "socks",
] }
# Used for conduit::Error type
thiserror = "2" #TODO: 2
# Used to generate thumbnails for images
image = { version = "0.25", default-features = false, features = [
  "gif",
  "jpeg",
  "png",
  "webp",
] }
# Used for creating media filenames
hex = "0.4"
sha2 = "0.10"
# Used for parsing media retention policies from the config
bytesize = { version = "2", features = ["serde"] }
humantime-serde = "1"
# Used to encode server public key
base64 = "0.22"
# Used when hashing the state
ring = "0.17"
# Used when querying the SRV record of other servers
hickory-resolver = "0.25"
# Used to find matching events for appservices
regex = "1"
# jwt jsonwebtokens
jsonwebtoken = "9"
# Performance measurements
opentelemetry = "0.29"
opentelemetry-jaeger-propagator = "0.29"
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
tracing = "0.1"
tracing-flame = "0.2.0"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru-cache = "0.1.2"
parking_lot = { version = "0.12", optional = true }
rusqlite = { version = "0.35", optional = true, features = ["bundled"] }
# crossbeam = { version = "0.8.2", optional = true }
num_cpus = "1"
threadpool = "1"
# Used for ruma wrapper
serde_html_form = "0.2"
thread_local = "1"
# used for TURN server authentication
hmac = "0.12"
sha-1 = "0.10"
# used for conduit's CLI and admin room command parsing
chrono = "0.4"
clap = { version = "4", default-features = false, features = [
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
] }
humantime = "2"
shell-words = "1.1.0"
futures-util = { version = "0.3", default-features = false }
# Used for reading the configuration from conduit.toml & environment variables
figment = { version = "0.10", features = ["env", "toml"] }
# Validating urls in config
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
tikv-jemallocator = { version = "0.6", features = [
  "unprefixed_malloc_on_supported_platforms",
], optional = true }
sd-notify = { version = "0.4", optional = true }
# Used for inspecting request errors
http-body-util = "0.1.3"
rusty-s3 = "0.7.0"
# Used for S3 media backend

# Used for matrix spec type definitions and helpers
[dependencies.ruma]
features = [
  "appservice-api-c",
  "client-api",
  "compat-empty-string-null",
  "compat-get-3pids",
  "compat-null",
  "compat-optional",
  "compat-optional-txn-pdus",
  "compat-server-signing-key-version",
  "compat-tag-info",
  "compat-unset-avatar",
  "federation-api",
  "push-gateway-api-c",
  "rand",
  "ring-compat",
  "state-res",
  "unstable-msc2448",
  "unstable-msc4186",
]
git = "https://github.com/ruma/ruma.git"

[dependencies.rocksdb]
features = ["lz4", "multi-threaded-cf", "zstd"]
optional = true
package = "rust-rocksdb"
version = "0.41"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["resource"] }

[features]
backend_rocksdb = ["rocksdb"]
backend_sqlite = ["sqlite"]
conduit_bin = ["axum"]
default = ["backend_rocksdb", "backend_sqlite", "conduit_bin", "systemd"]
jemalloc = ["tikv-jemallocator"]
sqlite = ["parking_lot", "rusqlite", "tokio/signal"]
systemd = ["sd-notify"]

[[bin]]
name = "conduit"
path = "src/main.rs"
required-features = ["conduit_bin"]

[lib]
name = "conduit"
path = "src/lib.rs"

[package.metadata.deb]
assets = [
  [
    "README.md",
    "usr/share/doc/matrix-conduit/",
    "644",
  ],
  [
    "debian/README.md",
    "usr/share/doc/matrix-conduit/README.Debian",
    "644",
  ],
  [
    "target/release/conduit",
    "usr/sbin/matrix-conduit",
    "755",
  ],
]
conf-files = ["/etc/matrix-conduit/conduit.toml"]
copyright = "2020, Timo Kösters <timo@koesters.xyz>"
depends = "$auto, ca-certificates"
extended-description = """\
A fast Matrix homeserver that is optimized for smaller, personal servers, \
instead of a server that has high scalability."""
license-file = ["LICENSE", "3"]
maintainer = "Paul van Tilburg <paul@luon.net>"
maintainer-scripts = "debian/"
name = "matrix-conduit"
priority = "optional"
section = "net"
systemd-units = { unit-name = "matrix-conduit" }

[profile.dev]
incremental = true
lto = 'off'

[profile.release]
codegen-units = 32
incremental = true
lto = 'thin'
# If you want to make flamegraphs, enable debug info:
# debug = true

# For releases also try to max optimizations for dependencies:
[profile.release.build-override]
opt-level = 3
[profile.release.package."*"]
opt-level = 3
