[workspace]
default-members = ["conduit"]
members = ["conduit"]
resolver = "2"

[workspace.lints.rust]
explicit_outlives_requirements = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
cloned_instead_of_copied = "warn"
dbg_macro = "warn"
str_to_string = "warn"

[workspace.package]
# See also `rust-toolchain.toml`
edition = "2021"
homepage = "https://conduit.rs"
repository = "https://gitlab.com/famedly/conduit"
rust-version = "1.85.0"

[profile.dev]
incremental = true
lto = 'off'

[profile.release]
codegen-units = 32
incremental = true
lto = 'thin'
# If you want to make flamegraphs, enable debug info:
# debug = true

# For releases also try to max optimizations for dependencies:
[profile.release.build-override]
opt-level = 3
[profile.release.package."*"]
opt-level = 3
